--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-firebase/app": "^21.10.1",
+    "@react-native-firebase/auth": "^21.10.1",
+    "@react-native-firebase/firestore": "^21.10.1",
+    "@react-native-firebase/messaging": "^21.10.1",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "date-fns": "^4.1.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
-    "react-native": "0.77.1"
+    "react-native": "0.77.1",
+    "react-native-calendars": "^1.1309.1",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -35,5 +50,8 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "resolutions": {
+    "react-native-reanimated": "3.16.7"
   }
 }
